# scalable-computing-examples

./: another.py  arrays.ipynb  dask.ipynb  geopandas_intro.ipynb  hello.py  jupyter-intro.ipynb  sw_design1.ipynb  sw_design2.ipynb  temp_dataset.nc
04-pleasing/: pleasing.ipynb
10-parquet/: parquet.ipynb
14-zarr/: zarr.ipynb
17-cloud-scale/: cog.ipynb  stac.ipynb
adcmodel/: pyproject.toml  test.ipynb
adcmodel/src/adcmodel/: data.py
adcmodel/tests/: test_data.py
group-project/: session-07.ipynb  session-11.ipynb
